--- a/app/src/main/res/layout/activity_detail_recipe.xml
+++ b/app/src/main/res/layout/activity_detail_recipe.xml
@@ -154,6 +154,18 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:riv_corner_radius="8dp" />
 
+
+                <ImageButton
+                    android:id="@+id/btn_favorite"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/icon_favorite_disable"
+                    app:layout_constraintEnd_toEndOf="@id/iv_preview"
+
+                    app:layout_constraintTop_toTopOf="@id/iv_preview" />
+
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="0dp"
