--- a/app/src/main/res/layout/fragment_ingridients.xml
+++ b/app/src/main/res/layout/fragment_ingridients.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rv_ingr"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:minHeight="600dp"
     android:overScrollMode="never"
     android:scrollbars="none"
     xmlns:app="http://schemas.android.com/apk/res-auto"
