--- a/app/src/main/res/layout/fragment_step_recipe.xml
+++ b/app/src/main/res/layout/fragment_step_recipe.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rv_step_recipe"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".presentation.detail.StepRecipeFragment">
+    android:clipToPadding="false"
+    android:nestedScrollingEnabled="false"
+    android:overScrollMode="never"
+    android:paddingTop="20dp"
+    android:paddingBottom="50dp"
+    android:scrollbars="none"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:listitem="@layout/item_step_recipe"
+    tools:context=".presentation.detail.StepRecipeFragment"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_step_recipe"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:overScrollMode="never"
-        android:paddingTop="20dp"
-        android:paddingBottom="50dp"
-        android:scrollbars="none"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_step_recipe" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
