--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,13 +8,13 @@
 
     <style name="sw_bottom_menu">
         <item name="fontFamily">@font/nunito_medium</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">12dp</item>
     </style>
 
     <style name="Theme.RecipeGroove" parent="Base.Theme.RecipeGroove" />
 
     <style name="TextTabLayoutHome" parent="TextAppearance.Design.Tab">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="textAllCaps">false</item>
     </style>
@@ -29,7 +29,7 @@
     </style>
 
     <style name="TextTabLayoutProfile" parent="TextAppearance.Design.Tab">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="textAllCaps">false</item>
     </style>
