--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,16 +21,16 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_menu"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="55dp"
         app:menu="@menu/main_bottom_menu"
         android:paddingHorizontal="20dp"
         app:elevation="6dp"
         app:itemTextColor="@color/red"
-        app:itemIconSize="26dp"
+        app:itemIconSize="24dp"
         app:backgroundTint="@color/white"
         app:labelVisibilityMode="auto"
         android:elevation="4dp"
-        app:itemPaddingBottom="11dp"
+        app:itemPaddingBottom="7dp"
         app:itemTextAppearanceActive="@style/sw_bottom_menu"
         app:itemActiveIndicatorStyle="@color/transparent"
         app:itemHorizontalTranslationEnabled="false"
