--- a/app/src/main/res/navigation/detail_recipe_navigation.xml
+++ b/app/src/main/res/navigation/detail_recipe_navigation.xml
@@ -2,14 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detail_recipe_navigation"
-    app:startDestination="@id/detailRecipeActivity">
+    android:id="@+id/detail_recipe_navigation">
 
-    <activity
-        android:id="@+id/detailRecipeActivity"
-        android:name="ru.topbun.recipes.presentation.detail.DetailRecipeActivity"
-        android:label="activity_detail_recipe"
-        tools:layout="@layout/activity_detail_recipe" />
     <fragment
         android:id="@+id/ingredientsFragment"
         android:name="ru.topbun.recipes.presentation.detail.IngredientsFragment"
