--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -1,19 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/splashFragment">
 
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="ru.topbun.recipes.presentation.main.home.HomeFragment" />
+        android:id="@+id/mainFragment"
+        android:name="ru.topbun.recipes.presentation.main.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_detailRecipeFragment"
+            app:destination="@id/detailRecipeFragment"
+            app:enterAnim="@android:anim/slide_in_left" />
+    </fragment>
     <fragment
-        android:id="@+id/categoryFragment"
-        android:name="ru.topbun.recipes.presentation.main.category.CategoryFragment" />
+        android:id="@+id/splashFragment"
+        android:name="ru.topbun.recipes.presentation.SplashFragment"
+        android:label="fragment_splash"
+        tools:layout="@layout/fragment_splash" >
+        <action
+            android:id="@+id/action_splashFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
+            app:popUpTo="@id/main_navigation"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
-        android:id="@+id/favoriteFragment"
-        android:name="ru.topbun.recipes.presentation.main.favorite.FavoriteFragment" />
-    <fragment
-        android:id="@+id/searchFragment"
-        android:name="ru.topbun.recipes.presentation.main.search.SearchFragment" />
+        android:id="@+id/detailRecipeFragment"
+        android:name="ru.topbun.recipes.presentation.detail.DetailRecipeFragment"
+        android:label="DetailRecipeFragment" >
+        <argument
+            android:name="id"
+            app:argType="integer" />
+        <argument
+            android:name="url"
+            app:argType="string" />
+        <argument
+            android:name="preview"
+            app:argType="string" />
+    </fragment>
 </navigation>
