--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,7 +22,7 @@
         android:id="@+id/bottom_menu"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        app:menu="@menu/main_bottom_menu"
+        app:menu="@menu/bottom_menu"
         android:paddingHorizontal="20dp"
         app:elevation="6dp"
         app:itemTextColor="@color/red"
