--- a/app/src/main/res/navigation/category_navigation.xml
+++ b/app/src/main/res/navigation/category_navigation.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/category_navigation">
+    android:id="@+id/category_navigation"
+    app:startDestination="@id/categoryFragment">
 
     <fragment
         android:id="@+id/categoryFragment"
